fixed layout overlapping

--- a/src/components/advanced/layoutWrapper/LayoutWrapper.module.css
+++ b/src/components/advanced/layoutWrapper/LayoutWrapper.module.css
@@ -27,8 +27,6 @@
 }
 
 .outlet {
-  max-width: 1440px;
-  margin-inline: auto;
   padding-inline: 15px;
 }
 
